/*
 * Copyright 2020 Contributors to the Parsec project.
 * SPDX-License-Identifier: Apache-2.0
 */
syntax = "proto3";

package psa_aead_encrypt;

import "psa_algorithm.proto";

message Operation {
  string key_name = 1;
  psa_algorithm.Algorithm.Aead alg = 2;
  bytes nonce = 3;
  bytes additional_data = 4;
  bytes plaintext = 5;
}

message Result { bytes ciphertext = 1; }
option go_package = "github.com/parallaxsecond/parsec-client-go/wireinterface/operations/psaaeadencrypt";
