/*
 * Copyright 2020 Contributors to the Parsec project.
 * SPDX-License-Identifier: Apache-2.0
 */
syntax = "proto3";

package psa_mac_compute;

import "psa_algorithm.proto";

message Operation {
  string key_name = 1;
  psa_algorithm.Algorithm.Mac alg = 2;
  bytes input = 3;
}

message Result { bytes mac = 1; }

option go_package = "github.com/parallaxsecond/parsec-client-go/wireinterface/operations/psamaccompute";
