/*
 * Copyright 2020 Contributors to the Parsec project.
 * SPDX-License-Identifier: Apache-2.0
 */
syntax = "proto3";

package psa_verify_message;

import "psa_algorithm.proto";

message Operation {
  string key_name = 1;
  psa_algorithm.Algorithm.AsymmetricSignature alg = 2;
  bytes message = 3;
  bytes signature = 4;
}

message Result {}

option go_package = "github.com/parallaxsecond/parsec-client-go/wireinterface/operations/psaverifymessage";
